syntax = "proto3";

service CharacterService {
    rpc Exists (ExistsGetRefreshRequest) returns (ExistsResponse);
    rpc Get (ExistsGetRefreshRequest) returns (GetResponse);
    rpc GetNotUpdated(GetNotUpdatedRequest) returns (GetNotUpdatedResponse);
    rpc Refresh(ExistsGetRefreshRequest) returns (GetResponse);
}

message ExistsGetRefreshRequest {
    int32 id = 1;
}

message ExistsResponse {
    bool exists = 1;
}

message GetResponse {
    int32 id = 1;
    string handle = 2;
    string name = 3;
}

message GetNotUpdatedRequest {
    string interval = 1; // interval is PostgreSQL interval value
    int32 limit = 2;
}

message GetNotUpdatedResponse {
    repeated GetResponse characters = 1;
}
